[package]
name = "sqruff-wasm"
version.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
bench = false

[dependencies]
line-index = "0.1.1"
sqruff-lib.workspace = true
sqruff-lib-core = { path = "../lib-core", features = ["stringify"] }
wasm-bindgen = "0.2"
