[package]
name = "sqruff-wasm"
version.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
bench = false

[dependencies]
line-index = "0.1.1"
sqruff-lib.workspace = true
sqruff-parser-tree = { workspace = true, features = ["stringify"] }
wasm-bindgen = "0.2"
lineage = { path = "../lineage" }
ahash.workspace = true
