[package]
name = "sqruff-wasm"
version.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
bench = false

[dependencies]
line-index = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
sqruff-lib.workspace = true
sqruff-lib-core = { workspace = true, features = ["stringify"] }
wasm-bindgen = "0.2"
lineage = { path = "../lineage" }
