[package]
name = "sqruff-lsp"
description = "sqruff LSP server."
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
bench = false

[dependencies]
js-sys = "0.3.69"
lsp-types = "0.97"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2"
sqruff-lib = { version = "0.10.0", path = "../lib" }
console_error_panic_hook = "0.1.7"
serde_json = "1.0.121"
lsp-server = "0.7.6"
ahash = "0.8.11"
