[package]
name = "sqruff-lsp"
description = "sqruff LSP server."
version.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
bench = false

[dependencies]
ahash.workspace = true
console_error_panic_hook = "0.1.7"
js-sys = "0.3.74"
lsp-server = "0.7.6"
lsp-types = "0.97"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.140"
sqruff-lib.workspace = true
wasm-bindgen.workspace = true
